Adjust login & auto-retry for video loading error

--- a/create/src/create.css
+++ b/create/src/create.css
@@ -1,6 +1,6 @@
 
 
-/* Login Form */
+/* Create Form */
 #createUserForm { font-size:larger; }
 #createUserForm #inputSection { width: 100%; margin:auto; }
 #inputSection input { width: 100%; font-size:110%; }
