--- a/src/main.css
+++ b/src/main.css
@@ -10,9 +10,20 @@ body.theme_black_bg { background-color:black; color:white; }
 .adventureSubtitle { font-size: 24px; }
 
 /****** HOME PAGE: The Filter/Search section ********/
-#findAdventureSection { border-top:2px solid white; border-bottom: 2px solid white; padding-bottom:2%; }
+#findAdventureSection { border-top:2px solid white; border-bottom: 2px solid white; padding-bottom:2%; padding-top:2%;  }
+#filterSubsection { margin-bottom:1%; display:none; }
 .filterOption { border:1px solid white; border-radius:77px; cursor:pointer; padding:1%; margin:3%; display:inline-block; }
+
 .filterOption.filterOptionSelected { background-color:aqua; color:black; }
+
+#searchBarSection { text-align:left; border-radius:77px; border:1px solid gray; background-color:white; padding:1%; width:90%; margin:auto; font-size:20px; }
+#searchClearIcon { float:right; color: red !important; }
+/* .searchBar { text-align:left; border-radius:77px; border:1px solid gray; background-color:white; padding:1%; width:90%; margin:auto; font-size:20px; } */
+.searchBar { text-align:left; width:85%; display:inline-block; }
+.searchBar:focus { border: none; outline: none; }
+.searchBar.searchPlaceholder { color:gray; }
+.searchBar.searchText { color: black; }
+
 
 /****** HOME PAGE: The Adventure List section ********/
 .adventure_block { float:left; width: 90%; border:2px dashed gray; padding:1%; height:200px; overflow-y:scroll; margin:3%; }
@@ -33,8 +44,12 @@ body.theme_black_bg { background-color:black; color:white; }
 @media only screen and (min-device-width:1200px)
 {
 
+	#searchBarSection { width:30%;}
+
 	.adventure_block { width: 25%; height:150px; }
 	.filterOption { margin:0.2%; padding:0.5%; }
+
+	#filterSubsection { display:block; }
 	
 	#homeIcon { display: block; float:left; font-size: 30px; padding:0px; }
 	#homeIcon::after { content: ""; }
