--- a/templates/videoPick.html
+++ b/templates/videoPick.html
@@ -1,8 +1,8 @@
-<div class="videoPickerBlock centered dlf_center_block_large pointer" data-video-id="{{VideoID}}">
+<div class="videoPickerBlock centered pointer" data-video-id="{{VideoID}}">
 
-    <h2>
+    <h2 class="title" data-video-id="{{VideoID}}" onclick="onPickVideo(event)">
         {{Name}} 
-        <i class="fa fa-external-link openLinkIcon" style="color:lightblue;" aria-hidden="true" data-video-id="{{VideoID}}" onclick="onPickVideo(event)"></i>
+        <i class="fa fa-external-link openLinkIcon" aria-hidden="true" data-video-id="{{VideoID}}" onclick="onPickVideo(event)"></i>
     </h2>
     <p>{{Description}}</p>
 </div>
