--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,10 +5,28 @@ body.theme_black_bg { background-color:black; color:white; }
 #homeIcon { text-align: left; font-size: 20px; cursor: pointer; float:none; display:block; padding-top: 1%; padding-left: 1%; }
 #homeIcon::after { content:" home"; }
 
+
+.nav-pills{
+	width: 450px;
+  }
+  .nav-item{
+	width: 50%;
+  }
+
+.nav-pills .nav-link{
+	font-weight: bold;
+	padding-top: 13px;
+	text-align: center;
+	background: #343436;
+	color: #fff;
+	border-radius: 30px;
+	height: 100px;
+  }
+
 .psuedoHyperlink { cursor:pointer; text-decoration:none; color:blue; }
 
  /* Menu Sections */
- .menuSection { border-bottom: 2px solid white; }
+ .menuSection { margin-bottom:2%; padding-bottom:2%; }
  .menuItems { text-align:center; clear:both; }
  .menuItem.left { float:left; width:80%;text-align:left; }
  .menuItem .subMenuItem { display: block; }
@@ -17,27 +35,35 @@ body.theme_black_bg { background-color:black; color:white; }
  .menuItem.right { float:right; width:15%; text-align:left; text-align:right; }
 
 /****** HOME PAGE: The Title section ********/
-#adventureTitle { font-size:28px; }
+#adventureTitle { padding-left:7%; margin-top:1% }
 .adventureSubtitle { font-size: 24px; }
 .titleSection { margin-top:1%; text-align:center; }
 .titleSection h1.title { float:left; }
 
 /****** HOME PAGE: The Filter/Search section ********/
+#randomAdventureText { display: none; }
+#randomAdventureIcon { color:orange; vertical-align: middle; }
 #findAdventureSection { border-top:2px solid white; border-bottom: 2px solid white; padding-bottom:2%; padding-top:2%;  }
 .filterOption { border:1px solid white; border-radius:77px; cursor:pointer; padding:1%; margin:3%; display:inline-block; }
-
 .filterOption.filterOptionSelected { background-color:aqua; color:black; }
 
-#searchBarSection { text-align:left; border-radius:77px; border:1px solid gray; background-color:white; padding:1%; width:50%; font-size:20px; }
+#searchBarSection { text-align:left; border-radius:77px; border:1px solid gray; background-color:white; padding:1%; width:50%; }
 .searchBarSection { display:inline-block; }
 .searchBar { text-align:left; width:85%; display:inline-block; }
 #searchClearIcon { float:right; color: red !important; }
 .searchBar:focus { border: none; outline: none; }
 .searchBar.searchPlaceholder { color:gray; }
 .searchBar.searchText { color: black; }
+#searchBar { font-size: 12px; }
 
+/****** HOME PAGE: The Adventure BlocksList ********/
+.adventureBlock { height:300px; margin-bottom:3%; opacity:0%; transition: opacity 2s ease; }
+.adventureBlock.visible { opacity: 100%; }
+.adventureBlock img { width:100%; height:80%; }
+.adventureBlockLink { color: #1F51FF !important; }
+.openLinkIcon { font-size:smaller !important; }
+.adventureDate { font-size:smaller !important; font-style:italic;}
 
-/****** HOME PAGE: The Adventure List section ********/
 .adventure_block { float:left; width: 90%; border:2px dashed gray; padding:1%; height:200px; margin:3%; }
 .adventure_block.hidden { opacity: 0px;}
 .adventure_block h2 { font-size: 18px; }
@@ -46,8 +72,8 @@ body.theme_black_bg { background-color:black; color:white; }
 .additionalDetailsToggle { font-style:italic; font-size:smaller;color:orange !important; display:block; margin:auto; }
 .protectedIconYes { color:goldenrod; }
 .protectedIconNo { display:none !important; }
-.openLinkIcon { font-size:smaller !important; }
-.adventureDate { font-size:smaller !important; font-style:italic;}
+
+
 
 /**************************************************** 
 	MEDIA SCREENS
@@ -73,6 +99,7 @@ body.theme_black_bg { background-color:black; color:white; }
 	/* .searchSection { margin:auto; width: 60%; } */
 	#searchBarSection { width:55%;}
 	.searchBarSection { margin:auto; margin-right:1% !important; }
+	#searchBar { font-size:inherit; }
 
 	.adventure_block { width: 25%; height:150px; }
 	.filterOption { margin:0.2%; padding:0.5%; }
