--- a/src/templates/adventure/contentPreview.html
+++ b/src/templates/adventure/contentPreview.html
@@ -1,3 +1,6 @@
 <div class="contentPreviewBlock" data-content-id="{{VideoID}}">
-    <img data-content-id="{{VideoID}}" src="{{Thumbnail}}" alt="img" style="width:70%; height:150px;" onclick="onOpenContent(event)" />
+    <span class="playButtonSection">
+        <i class="playButtonIcon fa-solid fa-play" onclick="onOpenContent(event)"></i>
+    </span>
+    <img data-content-id="{{VideoID}}" src="{{Thumbnail}}" alt="img" style="width:100%; height:100%;" onclick="onOpenContent(event)" />
 </div>
