--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -1,5 +1,7 @@
 <div data-adventure-id="{{AdventureID}}" class="adventureBlock">
-    <img src="{{CoverThumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
+    <div class="adventureBlockImageSection">
+        <img src="{{CoverThumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
+    </div>
     <h3 style="margin:0%;">
         <a class="adventureBlockLink dtk-href-no-textdec" href="./adventure/?id={{AdventureID}}">
             {{Name}}
