--- a/src/css/adventure.css
+++ b/src/css/adventure.css
@@ -7,6 +7,8 @@
 .showDescriptionIcon { color: limegreen; vertical-align: middle; }
 #moreDetailsIcon { padding-left:0.5% }
 #contentTitle { display:inline-block; width: 100%; }
+#subMenuSection { position:relative; z-index:99 }
+.contentCreatorSection { font-size:smaller; display:inline-block; margin-top:2%; }
 
 /**** CONTENT PREVIEW: The blocks to represent */
 .contentPreviewBlock { position:relative; width:90%; height:170px; margin:auto; margin-bottom:5%; text-align:center; }
@@ -14,12 +16,17 @@
 .contentPreviewBlock .playButtonSection { position:absolute; width:100%; height:100%; text-align:center; }
 .contentPreviewBlock .playButtonIcon { font-size:170%; display: flex; width:100%; height:100%; align-items: center; justify-content: center; }
 
-.backIcon { transform: rotateY(180deg); }
+
 
 /**** CONTENT VIEW: Viewing the individual content  */
-#contentViewSection { clear: both; position: relative; height: 100%; height: 350px; }
-#contentViewSection .backIconSection { position:absolute; z-index:100; top:0; }
+.backIcon { transform: rotateY(180deg); }
+.navButton { color:gray; }
+.navButton.clickable { color:#1F51FF !important; }
 
+#contentViewSection { clear: both; position: relative; height: 100%; height: 350px; }
+#contentViewSection .backIconSection { position:absolute; z-index:99; top:0; }
+
+#contentNavigationSection { position: relative; }
 
 /**** VIDEO NAV: Navigating between videos **********/
 #videoNavigationSection { width: 90%; margin:auto; }
