--- a/src/templates/adventure/contentPreview.html
+++ b/src/templates/adventure/contentPreview.html
@@ -1,6 +1,6 @@
-<div class="contentPreviewBlock" data-content-id="{{VideoID}}">
+<div class="contentPreviewBlock" data-content-id="{{ContentID}}">
     <span class="playButtonSection">
         <i class="playButtonIcon fa-solid fa-play" onclick="onOpenContent(event)"></i>
     </span>
-    <img data-content-id="{{VideoID}}" src="{{Thumbnail}}" alt="img" style="width:100%; height:100%;" onclick="onOpenContent(event)" />
+    <img src="{{Thumbnail}}" alt="img" style="width:100%; height:100%;" onclick="onOpenContent(event)" />
 </div>
