--- a/src/templates/adventure/videoIFrame.html
+++ b/src/templates/adventure/videoIFrame.html
@@ -1,7 +1,7 @@
 <iframe 
     id="videoIFrame"
-    src="https://iframe.videodelivery.net/{{VideoID}}?autoplay=true&" 
-    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;" 
+    src="https://iframe.videodelivery.net/{{ContentID}}?autoplay=true&" 
+    style="border: none; position: absolute; top: -15%; left: 0; height: 100%; width: 100%;" 
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" 
     allowfullscreen="true"
     data-content-id="{{ContentID}}">
