--- a/src/templates/videoFrame.html
+++ b/src/templates/videoFrame.html
@@ -1,6 +1,6 @@
 <iframe 
     id="videoIFrame"
-    src="https://iframe.videodelivery.net/{{VideoID}}?autoplay=true&" 
+    src="https://iframe.videodelivery.net/{{ContentID}}?autoplay=true&" 
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;" 
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" 
     allowfullscreen="true">
