--- a/src/css/adventure.css
+++ b/src/css/adventure.css
@@ -14,19 +14,28 @@
 .contentPreviewBlock { position:relative; width:90%; height:170px; margin:auto; margin-bottom:5%; text-align:center; }
 .contentPreviewBlock img { width: 100%; height:100%; }
 .contentPreviewBlock .playButtonSection { position:absolute; width:100%; height:100%; text-align:center; }
-.contentPreviewBlock .playButtonIcon { font-size:170%; display: flex; width:100%; height:100%; align-items: center; justify-content: center; }
-
-
+.contentPreviewBlock .playButtonIcon { font-size:170%; display: flex; width:100%; height:100%; align-items: center; justify-content: center; color:#FAF9F6;  }
 
 /**** CONTENT VIEW: Viewing the individual content  */
 .backIcon { transform: rotateY(180deg); }
 .navButton { color:gray; }
 .navButton.clickable { color:#1F51FF !important; }
 
-#contentViewSection { clear: both; position: relative; height: 100%; height: 350px; }
+#contentViewSection { clear: both; position: relative; height: 350px; }
 #contentViewSection .backIconSection { position:absolute; z-index:99; top:0; }
 
-#contentNavigationSection { position: relative; }
+#contentViewSection { z-index: 95; }
+.contentNav { position: absolute; padding-top:25%; font-size:45px; cursor:pointer; opacity:0%; transition: opacity 1.5s ease; }
+.conventNav:hover { background-color:lightgray; }
+.contentNav.left { left:1px; }
+.contentNav.right { right:1px; }
+
+.contentNav.visible { z-index:95; color:#FAF9F6 }
+.contentNav.visible.clickable { opacity:0.9; }
+.contentNav.visible.disabled { opacity:0.2; }
+
+#videoFramePanel { height:250px; position:relative; }
+#videoFrame {  border: none; position: absolute; top: 2; left: 0; height: 100%; width: 100%;}
 
 /**** VIDEO NAV: Navigating between videos **********/
 #videoNavigationSection { width: 90%; margin:auto; }
