--- a/src/templates/adventure/videoIFrame.html
+++ b/src/templates/adventure/videoIFrame.html
@@ -1,7 +1,6 @@
 <iframe 
-    id="videoIFrame"
+    id="videoFrame"
     src="https://iframe.videodelivery.net/{{ContentID}}?autoplay=true&" 
-    style="border: none; position: absolute; top: -15%; left: 0; height: 100%; width: 100%;" 
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" 
     allowfullscreen="true"
     data-content-id="{{ContentID}}">
