--- a/src/templates/adventure/videoIFrame.html
+++ b/src/templates/adventure/videoIFrame.html
@@ -1,6 +1,6 @@
 <iframe 
     id="videoFrame"
-    src="https://iframe.videodelivery.net/{{ContentID}}?autoplay=true&" 
+    src="{{IFrameUrl}}" 
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" 
     allowfullscreen="true"
     data-content-id="{{ContentID}}">
