--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -1,13 +1,13 @@
 <div data-adventure-id="{{AdventureID}}" class="adventureBlock">
-    <div class="adventureBlockImageSection">
+	<img class="loadingGif" src="https://dejai.github.io/scripts/assets/img/loading1.gif" >
+    <div class="adventureBlockImageSection showOnImageLoad">
         <img src="{{CoverThumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
     </div>
-    <h3 style="margin:0%;">
+    <h3 style="margin:0%;" class="showOnImageLoad">
         <a class="adventureBlockLink dtk-href-no-textdec" href="./adventure/?id={{AdventureID}}">
             {{Name}}
             &nbsp;
             <i class="fa fa-external-link openLinkIcon" aria-hidden="true"></i>
         </a>
     </h3>
-    <p id="firstParagraph_{{AdventureID}}" style="margin:0%;">{{FirstParagraph}}</p>
 </div>
