Change to way videos are loaded;

--- a/src/templates/adventure/videoIFrame.html
+++ b/src/templates/adventure/videoIFrame.html
@@ -1,6 +1,6 @@
 <iframe 
     id="videoFrame"
-    src="{{IFrameUrl}}" 
+    src="{{Urls.iframe}}" 
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" 
     allowfullscreen="true"
     data-content-id="{{ContentID}}">
