--- a/src/templates/adventure/contentPreview.html
+++ b/src/templates/adventure/contentPreview.html
@@ -2,5 +2,5 @@
     <span class="playButtonSection">
         <i class="playButtonIcon fa-solid fa-play" onclick="onOpenContent(event)"></i>
     </span>
-    <img src="{{Thumbnail}}" alt="img" style="width:100%; height:100%;" onclick="onOpenContent(event)" />
+    <img src="{{Urls.thumbnail}}" alt="img" style="width:100%; height:100%;" onclick="onOpenContent(event)" />
 </div>
