Use the Adventure's thumbnail for cover

--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -1,7 +1,7 @@
 <div data-adventure-id="{{AdventureID}}" class="adventureBlock">
 	<img class="loadingGif" src="https://dejai.github.io/scripts/assets/img/loading1.gif" >
     <div class="adventureBlockImageSection showOnImageLoad">
-        <img src="{{CoverThumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
+        <img src="{{CoverContent.Urls.thumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
     </div>
     <h3 style="margin:0%;" class="showOnImageLoad">
         <a class="adventureBlockLink dtk-href-no-textdec" href="./adventure/?id={{AdventureID}}">
