--- a/src/css/adventure.css
+++ b/src/css/adventure.css
@@ -12,7 +12,7 @@
 .contentCreatorSection { font-size:smaller; display:inline-block; font-style: italic; }
 
 /*** Description */
-#descriptionSection { clear:both; }
+#descriptionSection { clear:both; width:90%; margin:auto; }
 #adventureDescription { clear:both; }
 
 /*** Content List */
@@ -24,7 +24,7 @@
 .contentPreviewBlock .playButtonIcon { font-size:280%; display: flex; width:100%; height:100%; align-items: center; justify-content: center; color:#f8f8ff;  }
 
 /*** Content View */
-#contentViewSection { clear: both; position: relative; height: 350px; z-index: 95; }
+#contentViewSection { clear: both; position: relative; height: 450px; z-index: 95; }
 .contentNav { position: absolute; padding-top:40%; font-size:45px; cursor:pointer; opacity:0%; transition: opacity 1.5s ease; }
 .conventNav:hover { background-color:lightgray; }
 .contentNav.left { left:1px; }
@@ -32,43 +32,62 @@
 .contentNav.visible { z-index:95; color:#FAF9F6 }
 .contentNav.visible.clickable { opacity:0.9; }
 .contentNav.visible.disabled { opacity:0.2; }
-#videoFramePanel { height:350px; position:relative; }
+/* #videoFramePanel { position:relative; } */
 #videoFramePanel:hover { cursor:pointer; }
-#videoFrame {  border: none; position: absolute; top:2%; left: 0; height: 100%; width: 100%;}
+#videoFrame {  border: none; position: absolute; top:0; left: 0; height: 75%; width: 100%;}
 
 /*** MEDIA SECTIONS ***/
 @media only screen and (max-width: 400px){
-	#videoFramePanel { height: 200px; }
 	#subMenuSection { width:90%; }
-	.contentNav { padding-top:15%; }
+	#contentViewSection { height:350px; }
+	.contentNav { padding-top:25%; }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 500px) {
+	#videoFrame { height:90%; }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
 	#subMenuSection { width:70%; }
-	#contentViewSection { height:450px; width:40%; margin:auto; }
-	.contentNav { padding-top:20%; }
+	#contentViewSection { height:450px; margin:auto; }
+	.contentNav { padding-top:30%; }
+	#videoFrame { height:90%; }
+}
+
+@media only screen and (min-width: 700px) {
+	#subMenuSection { width:70%; }
+	#contentViewSection { width:70% }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
 	#subMenuSection { width:60%; }
+	#descriptionSection { width: 50%; }
+	#contentViewSection { width:60% }
 	.contentNav { padding-top:30%; }
+	#videoFrame { height:100%; }
 }
 
 /* Large devices (laptops/desktops ) */
 @media only screen and (min-width: 900px) {
-	#subMenuSection { width:50%; }
-	.contentNav { z-index: 95; }
+	#subMenuSection { width:50%; font-size:20px; }
+	#descriptionSection { width: 40%; }
+	#contentViewSection { width:50% }
+	.contentNav { z-index: 95; padding-top:35%; }
 	.contentNav.clickable:hover { opacity:0.9; }
 	.contentNav.disabled:hover { opacity:0.2; }
-	#subMenuSection { font-size:20px; }
-	#videoFrame { top: 5%; }
+}
+
+@media only screen and (min-width: 1000px) {
+	#contentViewSection { height:350px; }
+	.contentNav.left { left:20px; }
+	.contentNav.right { right:20px; }
+
 }
 
 /* Larger Devices */
 @media only screen and (min-device-width:1200px) {
-	#videoFramePanel { height: 400px; }
-	.contentNav { padding-top:20%; }
-	#videoFramePanel { width:95%; margin:auto; }
+	#contentViewSection { height:550px; }
 }
