--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -3,7 +3,7 @@
     <div class="adventureBlockImageSection showOnImageLoad">
         <img src="{{CoverContent.Urls.thumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
     </div>
-    <h3 style="margin:0%;" class="showOnImageLoad">
+    <h3 class="nameSection showOnImageLoad">
         <a class="adventureBlockLink dtk-href-no-textdec" href="./adventure/?id={{AdventureID}}">
             {{Name}}
             &nbsp;
